<resources>
    <string name="app_name">image</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strText1">선택을 시작하시겠습니까?</string>
    <string name="strText2">좋아하는 안드로이드 버전은?</string>
    <string name="strSwitch1">시작함</string>
    <string name="strRadioButton1">젤리빈(4.3)</string>
    <string name="strRadioButton2">킷켓(4.4)</string>
    <string name="strRadioButton3">롤리팝(5.0)</string>
    <string name="strBtn1">종료</string>
    <string name="strBtn2">처음으로</string>
</resources>
