<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text1"
        android:text="@string/strText1"
        android:textSize="20dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Switch1"
        android:text="@string/strSwitch1"
        android:checked="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text2"
        android:text="@string/strText2"
        android:visibility="invisible"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Rgroup1"
        android:visibility="invisible">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Rjelly"
            android:text="@string/strRadioButton1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Rkit"
            android:text="@string/strRadioButton2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Rlol"
            android:text="@string/strRadioButton3"/>

    </RadioGroup>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:id="@+id/ImaAndroid"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Btn1"
        android:text="@string/strBtn1"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Btn2"
        android:text="@string/strBtn2"
        android:visibility="invisible"/>



</LinearLayout>
